Date		Added
======
2009/05/04
	- Added a missing zeny check in the Jawaii Bartender. (bugreport:2897) [brianluau]
	- Added a missing 'close' in the Mage quest Bookshelf. (bugreport:2873)
2009/05/03
	- Switched the slot enchanter's checks so they come AFTER the final 'next' pause. (bugreport:2664)
	* Removed the obfuscation of the #kafra_code password, following ultramage's suggestion. [brianluau]
2009/05/02
	- Changed a misleading message in the custom Job Changer. (bugreport:682) [brianluau]
	- Updated some NPC's facing directions. (bugreport:3030)
	- Fixed a grammar typo in the Assassin skill quest.
	* Applied timexy's pvp warp name fix (bugreport:2938) [Playtester]
2009/04/30
	* Fixed various typos in the Moscovia quests thanks to Ihades (bugreport:3036) [Playtester]
2009/04/29
	* Updated ASSIN_Q2 variable range check from < 1 to < 3 to defend against the variable being stuck at an incorrect value of 1 or 2,
	  caused by logging out or pressing cancel on choices list at an inappropriate time thus rendering the player unable to complete the Assassin Quest.
	  Thanks to Chibi for Report. [Paradox924X]
2009/04/28
	* Removed unnecessary text and fixed a goto in the Hunter Jobquest (bugreport:3014) [Playtester]
	* A few quest updates due to bugreports [Playtester]
	- added a missing close in the Kiel Hyre Quest (bugreport:2885)
	- added L0ne_W0lf's Cool Event Corp script + a few fixes to it (bugreport:3019)
	- fixed a small typo in rachel.txt (bugreport:3029)
2009/04/23
	* Fixed wrong coordinates of the Prontera Bartender (bugreport:3000) [Playtester]
	* Fixed a chat window not being closeable in the Training Grounds (bugreport:3009) [Playtester]
2009/04/20
	* Applied BrianL's castle switch fix (bugreport:2969) [Playtester]
	* Various script updates [Playtester]
	- Removed the Acorn repeatable quest (got removed on iRO)
	- Re-enabled Umbala bungee jumping (bugreport:2978)
	- Fixed a reward in monster race (bugreport:2990)
2009/04/17