@@ -5917,6 +5917,17 @@ set @i, distance(100,200,101,202);
 
 ---------------------------------------
 
+*md5("<string>")
+
+Returns the md5 checksum of a number or string.
+
+Example:
+	mes md5(12345);
+	mes md5("12345"); 	// Will both display 827ccb0eea8a706c4c34a16891f84e7b
+	mes md5("qwerty"); 	// Will display d8578edf8458ce06fbc5bb76a58c5ca4
+
+---------------------------------------
+
 *query_sql "your MySQL query", <array variable> {,<array variable>, ...};
 *query_logsql "your MySQL query", <array variable> {,<array variable>, ...};
 
